# smarthouse-web-db

./: .env  Cargo.toml  README.md
cclient/: Cargo.toml
cclient/examples/: smart_house.rs
cclient/src/: lib.rs
cserver/: Cargo.toml
cserver/db/: smart_house.db
cserver/migrations/2023-08-03-153648_create_rooms/: up.sql
cserver/migrations/2023-08-03-154239_create_devices/: up.sql
cserver/src/: actions.rs  api.rs  db.rs  errors.rs  lib.rs  main.rs  models.rs  schema.rs
