[package]
name = "cclient"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
actix-web = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }

tokio = { version = "1.29.1", features = ["full"] }
reqwest = { version = "0.11.18", features = ["json"] }

cserver = { path = "../cserver" }
